--- a/app/views/restaurant/_detail-card.html.haml
+++ b/app/views/restaurant/_detail-card.html.haml
@@ -1,11 +1,11 @@
 .card.w-75.p-2.mx-auto
   .card-body
     %h2.card-title.text-center 
-      = @list.name
+      -# = @restaurant.name
     = image_tag "kitchen-731351_1280.jpg", class: "card-img-top"
-    %p.card-text ジャンル：#{@list.detail.genre.name}
-    %p.card-text オススメシーン: #{@list.detail.scene_id}
-    %p.card-text ドレスコード: #{@list.detail.atmosphere_id}
-    %p.card-text オススメの文章をかく#{@list.content}
-    %a{:href => "#!"} リンク→#{@list.tabelog}
-    %a{:href => "#!"} リンク→#{@list.shopurl}
+    -# %p.card-text ジャンル：#{@restaurant.detail.genre.name}
+    -# %p.card-text オススメシーン: #{@restaurant.detail.scene_id}
+    -# %p.card-text ドレスコード: #{@restaurant.detail.atmosphere_id}
+    -# %p.card-text オススメの文章をかく#{@restaurant.content}
+    -# %a{:href => "#!"} リンク→#{@restaurant.tabelog}
+    -# %a{:href => "#!"} リンク→#{@restaurant.shopurl}
