--- a/app/views/restaurant/_question.html.haml
+++ b/app/views/restaurant/_question.html.haml
@@ -35,5 +35,5 @@
           %input#customRadio8.form-check-input{:name => "question3", :type => "radio"}/
           %label.form-check-label{:for => "customRadio8"} ドレスコードがしっかりしている
     %button.btn.btn-dark{type: "submit"} 
-      -# = link_to list_show_path(@detail) do
+      = link_to restaurant_show_path do
         回答を送信して、レストランを見る
