--- a/app/views/restaurants/_question.html.haml
+++ b/app/views/restaurants/_question.html.haml
@@ -35,5 +35,5 @@
           %input#customRadio8.form-check-input{:name => "question3", :type => "radio"}/
           %label.form-check-label{:for => "customRadio8"} ドレスコードがしっかりしている
     %button.btn.btn-dark{type: "submit"} 
-      = link_to restaurant_show_path do
-        回答を送信して、レストランを見る
+      -# = link_to restaurant_path do
+      -#   回答を送信して、レストランを見る
