--- a/app/views/restaurants/_cardlist.html.haml
+++ b/app/views/restaurants/_cardlist.html.haml
@@ -1,7 +1,7 @@
 .card-group
   .card
     .card-body
-      = image_tag "restaurant-449952_1280.jpg", class: "card-img-top", style: "heigth: 10rem"
+      = image_tag "#{@restaurant.images}", class: "card-img-top", style: "heigth: 10rem"
       %h4.card-title Card title
       %p.card-text This card has supporting text below as a natural lead-in to additional content.
       %a.card-link{:href => "#!"} Card link
