--- a/app/views/restaurants/_main-content.html.haml
+++ b/app/views/restaurants/_main-content.html.haml
@@ -1,9 +1,17 @@
 -# 改行等々リファクタリング
+-# .jumbotron
+-#   .container.text-center
+-#     %h1.display-5 本当に美味しいレストランをご紹介します
+-#     %p 本当に美味しいレストランとは、食通や料理人の間で良く名前が上がるお店があり、その様なお店の事をさします。
+-#     %p そんなお店の中から、いくつかの質問に答えて頂くだけで、あなたにオススメのレストランを見つける事が出来ます
+-#     .col
+-#       %button.col.btn.btn-pink-moon{"data-target" => ".bd-example-modal-lg", "data-toggle" => "modal"}
+-#         開始する
 .jumbotron
   .container.text-center
-    %h1.display-5 本当に美味しいレストランをご紹介します
-    %p 本当に美味しいレストランとは、食通や料理人の間で良く名前が上がるお店があり、その様なお店の事をさします。
-    %p そんなお店の中から、いくつかの質問に答えて頂くだけで、あなたにオススメのレストランを見つける事が出来ます
+    %h1.disply-5 みんなが一番美味しいと思うレストランが集まっています。
+    %p 色々なレストラン評価サイトがありますが、あまりに数が多すぎるため、レストランを探すにも一苦労してしまいます
+    %p 当サイトは、ユーザーの方が、一番オススメ出来るレストラン１店舗のみを探す事の出来る仕組みを作りました。
     .col
-      %button.col.btn.btn-pink-moon{"data-target" => ".bd-example-modal-lg", "data-toggle" => "modal"}
-        開始する
+      %button.col.btn.btn-pink-moon
+        レストランを探す
