--- a/app/views/restaurants/_navbar.html.haml
+++ b/app/views/restaurants/_navbar.html.haml
@@ -1,19 +1,22 @@
 %nav.navbar.navbar-expand-lg.navbar-light.bg-light
-  %a.navbar-brand{:href => "/"} MAIN 
+  %a.navbar-brand{:href => "/"} トップページ 
   %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
     %span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
     %ul.navbar-nav.mr-auto
-      %li.nav-item
-        = link_to destroy_user_session_path, class: "nav-link" do 
-          logout
-      %li.nav-item
-        = link_to new_user_session_path, class: "nav-link" do 
-          login
-    - if user_signed_in?
-      %li.nav-item
-        = link_to new_restaurant_path, class: "nav-link" do 
-          mypage
+      
+      - if user_signed_in?
+        %li.nav-item
+          = link_to new_restaurant_path, class: "nav-link" do 
+            投稿する
+        %li.nav-item
+          = link_to destroy_user_session_path, method: :DELETE, class: "nav-link" do 
+            ログアウト
+      - else
+        %li.nav-item
+          = link_to new_user_session_path, class: "nav-link" do 
+            ログイン
+
     %form.form-inline.my-2.my-lg-0
       %input.form-control.mr-sm-2{"aria-label" => "Search", :placeholder => "Search", :type => "text"}/
       %button.btn.btn-outline-success.my-2.my-sm-0{:type => "submit"} Search
