--- a/app/views/restaurants/_carousel.html.haml
+++ b/app/views/restaurants/_carousel.html.haml
@@ -22,13 +22,13 @@
       .carousel-item.active
         %img.d-block.w-100#sizefix{:alt => "First slide [900x300]", "data-holder-rendered" => "true", "data-src" => "holder.js/900x300?auto=yes&bg=777&fg=555&text=First slide", :src => "https://cdn.pixabay.com/photo/2017/05/20/08/36/panorama-of-the-landscape-2328387_1280.jpg"}/
         .carousel-caption.d-none.d-md-block
-          %h3 First slide label
-          %p Nulla vitae elit libero, a pharetra augue mollis interdum.
+          %h3 厳選したレストランのみを掲載
+          %p 数あるレストランの中で、特に優れたレストランのみを掲載しています
       .carousel-item
         %img.d-block.w-100#sizefix{:alt => "Second slide [900x300]", "data-holder-rendered" => "true", "data-src" => "holder.js/900x300?auto=yes&bg=666&fg=444&text=Second slide", :src => "https://cdn.pixabay.com/photo/2017/08/30/17/25/restaurant-2697945_1280.jpg"}/
         .carousel-caption.d-none.d-md-block
-          %h3 Second slide label
-          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          %h3 ジャンルやシーンに合わせた選択
+          %p ジャンルや利用シーンによって検索する事が出来る事で、お店選びの失敗を減らす事が出来ます
     %a.carousel-control-prev{"data-slide" => "prev", :href => "#carouselExampleCaptions", :role => "button"}
       %span.carousel-control-prev-icon{"aria-hidden" => "true"}
       %span.sr-only Previous
