--- a/app/views/restaurants/_footer.html.haml
+++ b/app/views/restaurants/_footer.html.haml
@@ -1,7 +1,7 @@
 %section#footer
   .container
-    .row.text-center.text-xs-center.text-sm-left.text-md-left
-      .col-xs-12.col-sm-4.col-md-4
+    .row
+      .col-xs-12.col-sm-6.col-md-6
         %h5 Quick links
         %ul.list-unstyled.quick-links
           %li
@@ -24,7 +24,7 @@
             %a{:href => "javascript:void();"}
               %i.fa.fa-angle-double-right>
               Videos
-      .col-xs-12.col-sm-4.col-md-4
+      .col-xs-12.col-sm-6.col-md-6
         %h5 Quick links
         %ul.list-unstyled.quick-links
           %li
@@ -47,29 +47,29 @@
             %a{:href => "javascript:void();"}
               %i.fa.fa-angle-double-right>
               Videos
-      .col-xs-12.col-sm-4.col-md-4
-        %h5 Quick links
-        %ul.list-unstyled.quick-links
-          %li
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-angle-double-right>
-              Home
-          %li
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-angle-double-right>
-              About
-          %li
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-angle-double-right>
-              FAQ
-          %li
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-angle-double-right>
-              Get Started
-          %li
-            %a{:href => "https://wwwe.sunlimetech.com", :title => "Design and developed by"}
-              %i.fa.fa-angle-double-right>
-              Imprint
+      -# .col-xs-12.col-sm-4.col-md-4
+      -#   %h5 Quick links
+      -#   %ul.list-unstyled.quick-links
+      -#     %li
+      -#       %a{:href => "javascript:void();"}
+      -#         %i.fa.fa-angle-double-right>
+      -#         Home
+      -#     %li
+      -#       %a{:href => "javascript:void();"}
+      -#         %i.fa.fa-angle-double-right>
+      -#         About
+      -#     %li
+      -#       %a{:href => "javascript:void();"}
+      -#         %i.fa.fa-angle-double-right>
+      -#         FAQ
+      -#     %li
+      -#       %a{:href => "javascript:void();"}
+      -#         %i.fa.fa-angle-double-right>
+      -#         Get Started
+      -#     %li
+      -#       %a{:href => "https://wwwe.sunlimetech.com", :title => "Design and developed by"}
+      -#         %i.fa.fa-angle-double-right>
+      -#         Imprint
     .row
       .col-xs-12.col-sm-12.col-md-12.mt-2.mt-sm-5
         %ul.list-unstyled.list-inline.social.text-center
@@ -88,8 +88,3 @@
           %li.list-inline-item
             %a{:href => "javascript:void();", :target => "_blank"}
               %i.fa.fa-envelope
-    .row
-      .col-xs-12.col-sm-12.col-md-12.mt-2.mt-sm-2.text-center.text-white
-        %p.h6
-          \&amp;copy All right Reversed.
-          %a.text-green.ml-2{:href => "https://www.sunlimetech.com", :target => "_blank"} Sunlimetech
