--- a/app/views/restaurants/_main-content.html.haml
+++ b/app/views/restaurants/_main-content.html.haml
@@ -9,9 +9,10 @@
 -#         開始する
 .jumbotron
   .container.text-center
-    %h1.disply-5 みんなが一番美味しいと思うレストランが集まっています。
+    %h1.disply-5 みんなが一番美味しいと思うレストランだけを集めました
     %p 色々なレストラン評価サイトがありますが、あまりに数が多すぎるため、レストランを探すにも一苦労してしまいます
-    %p 当サイトは、ユーザーの方が、一番オススメ出来るレストラン１店舗のみを探す事の出来る仕組みを作りました。
+    %p 当サイトは、ユーザーの方が、一番オススメ出来るレストラン１店舗のみを登録出来る仕組みを作りました。
     .col
       %button.col.btn.btn-pink-moon
-        レストランを探す
+        = link_to serch_restaurants_path, class: "nav-link" do
+          レストランを探す
