--- a/app/views/restaurants/serch.html.haml
+++ b/app/views/restaurants/serch.html.haml
@@ -1,2 +1,10 @@
 = render 'navbar'
 = render 'serch-btn'
+.container
+  .card
+    .card-body
+      %h4.card-title Card title
+      %p.card-text
+        Some quick example text to build on the card title
+        and make up the bulk of the card's content.
+      %a.btn.btn-primary{:href => "#!"} Go somewhere
