--- a/app/views/restaurants/_cardlist.html.haml
+++ b/app/views/restaurants/_cardlist.html.haml
@@ -3,12 +3,13 @@
   - @restaurants.order("RAND()").limit(3).each do |restaurant|
     .card
       .card-body
-        = image_tag "restaurant-449952_1280.jpg", class: "card-img-top", style: "heigth: 10rem"
+        = link_to restaurant_path(restaurant.id) do
+          = image_tag "restaurant-449952_1280.jpg", class: "card-img-top", style: "heigth: 10rem"
         %h4.card-title #{restaurant.name}
         %p.card-text #{restaurant.content}
         %a.card-link{:href => "#{restaurant.shopurl}"} 店舗
         %a.card-link{:href => "#{restaurant.tabelog}"} 食べログ
-        
+          
 %h2.text-center 最新の投稿
 .card-group
   - @restaurants.order(created_at: :desc).limit(3).each do |restaurant_new|
