--- a/app/views/restaurants/_footer.html.haml
+++ b/app/views/restaurants/_footer.html.haml
@@ -2,20 +2,20 @@
   .container
     .row
       .col-xs-12.col-sm-6.col-md-6
-        %h5 Quick links
+        %h5 レストラン検索
         %ul.list-unstyled.quick-links
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "/"}
               %i.fa.fa-angle-double-right>
               Home
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "/restaurants/serch"}
               %i.fa.fa-angle-double-right>
-              About
+              検索
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "/users/sign_up"}
               %i.fa.fa-angle-double-right>
-              FAQ
+              ユーザー登録
           %li
             %a{:href => "javascript:void();"}
               %i.fa.fa-angle-double-right>
@@ -25,66 +25,25 @@
               %i.fa.fa-angle-double-right>
               Videos
       .col-xs-12.col-sm-6.col-md-6
-        %h5 Quick links
+        %h5 製作者リンク
         %ul.list-unstyled.quick-links
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "https://qiita.com/fukaya_path"}
               %i.fa.fa-angle-double-right>
-              Home
+              Qiita
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "https://twitter.com/fukaya_path"}
               %i.fa.fa-angle-double-right>
-              About
+              twitter
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "https://github.com/FukayaHiroki/restaurantAPP"}
               %i.fa.fa-angle-double-right>
-              FAQ
+              Github アプリのリポジトリ
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "https://github.com/FukayaHiroki"}
               %i.fa.fa-angle-double-right>
-              Get Started
+              github mypage
           %li
-            %a{:href => "javascript:void();"}
+            %a{:href => "https://www.wantedly.com/users/83675833"}
               %i.fa.fa-angle-double-right>
-              Videos
-      -# .col-xs-12.col-sm-4.col-md-4
-      -#   %h5 Quick links
-      -#   %ul.list-unstyled.quick-links
-      -#     %li
-      -#       %a{:href => "javascript:void();"}
-      -#         %i.fa.fa-angle-double-right>
-      -#         Home
-      -#     %li
-      -#       %a{:href => "javascript:void();"}
-      -#         %i.fa.fa-angle-double-right>
-      -#         About
-      -#     %li
-      -#       %a{:href => "javascript:void();"}
-      -#         %i.fa.fa-angle-double-right>
-      -#         FAQ
-      -#     %li
-      -#       %a{:href => "javascript:void();"}
-      -#         %i.fa.fa-angle-double-right>
-      -#         Get Started
-      -#     %li
-      -#       %a{:href => "https://wwwe.sunlimetech.com", :title => "Design and developed by"}
-      -#         %i.fa.fa-angle-double-right>
-      -#         Imprint
-    .row
-      .col-xs-12.col-sm-12.col-md-12.mt-2.mt-sm-5
-        %ul.list-unstyled.list-inline.social.text-center
-          %li.list-inline-item
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-facebook
-          %li.list-inline-item
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-twitter
-          %li.list-inline-item
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-instagram
-          %li.list-inline-item
-            %a{:href => "javascript:void();"}
-              %i.fa.fa-google-plus
-          %li.list-inline-item
-            %a{:href => "javascript:void();", :target => "_blank"}
-              %i.fa.fa-envelope
+              Wantedly
