--- a/app/views/restaurants/_comment-card.html.haml
+++ b/app/views/restaurants/_comment-card.html.haml
@@ -1,7 +1,6 @@
-.card.w-75.p-2.mx-auto.mt-2
-  .card-body
-    %h4.card-title Card title
-    %p.card-text
-      Some quick example text to build on the card title
-      and make up the bulk of the card's content.
-    %a.btn.btn-primary{:href => "#!"} Go somewhere
+- @restaurant.comments.each do |comment|
+  .card.w-50.p-2.mx-auto.mt-2
+    .card-body
+      %p.card-text #{comment.created_at.in_time_zone('Tokyo').strftime("%Y/%m/%d %H:%M")}
+      %p.card-text #{comment.name}
+      %p.card-text #{sp_br comment.content}
