--- a/app/views/restaurants/_detail-card.html.haml
+++ b/app/views/restaurants/_detail-card.html.haml
@@ -5,11 +5,13 @@
     .text-center
       = image_tag "#{@restaurant.images.first.url}"
     .contents-box.px-5
-      %h3#font-size-20.border ジャンル: #{Genre.find_by(id: @restaurant.detail.genre).name}
-      %h3#font-size-20.border シーン: #{Scene.find_by(id: @restaurant.detail.scene).name}
-      %h3#font-size-15.border 説明: #{@restaurant.content}
+      %h3#font-size-15.border ジャンル
+      %h3#font-size-20.border #{Genre.find_by(id: @restaurant.detail.genre).name}
+      %h3#font-size-15.border シーン
+      %h3#font-size-20.border #{Scene.find_by(id: @restaurant.detail.scene).name}
+      %h3#font-size-15.border 説明:<br> #{sp_br @restaurant.content}
       %h3.border
         %a.card-link.btn.btn-danger{:href => "#{@restaurant.tabelog}"} 食べログ
         %a.card-link.btn.btn-primary{:href => "#{@restaurant.shopurl}"} ショップURL
-= render 'comment-form'
 = render 'comment-card'
+= render 'comment-form'
