--- a/app/views/restaurants/_navbar.html.haml
+++ b/app/views/restaurants/_navbar.html.haml
@@ -13,8 +13,8 @@
           = link_to new_restaurant_path, class: "nav-link" do 
             投稿する
         %li.nav-item
-          = link_to destroy_user_session_path, method: :DELETE, class: "nav-link" do 
-            ログアウト
+          = link_to user_path(current_user.id), class: "nav-link" do 
+            マイページ
       - else
         %li.nav-item
           = link_to new_user_session_path, class: "nav-link" do 
