--- a/app/views/restaurants/_navbar.html.haml
+++ b/app/views/restaurants/_navbar.html.haml
@@ -13,7 +13,7 @@
           = link_to new_restaurant_path, class: "nav-link" do 
             投稿する
         %li.nav-item
-          = link_to user_path(current_user.id), class: "nav-link" do 
+          = link_to users_path(current_user.id), class: "nav-link" do 
             マイページ
       - else
         %li.nav-item
