--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -22,6 +22,10 @@ html{
 a{
   text-decoration: none;
   color: white;
+  &:hover{
+    text-decoration: none;
+    color: white;
+  }
 }
 body,
 div,
