--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -13,7 +13,7 @@
 
       %li.list-group-item
         .btn.btn-success.col
-          = link_to user_path do 
+          = link_to user_path(current_user.id) do 
             投稿した一覧、編集、削除
 
       %li.list-group-item
