--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,12 @@
 = render partial: 'restaurants/navbar'
 .container
-  .card.text-center.m-2
-    .card-body
-      -if current_user.restaurants.empty?
+  -if current_user.restaurants.empty?
+    .card.text-center.m-2
+      .card-body
         %h2.card-title.display-4 現在、投稿はありません
-      - current_user.restaurants.each do |restaurant|
+  - @restaurants.each do |restaurant|
+    .card.text-center.m-2
+      .card-body
         %h2.card-title.display-4 #{restaurant.name}
         .col
           .btn.btn-primary.col-5
@@ -24,4 +26,6 @@
           -#           = link_to restaurant_path(restaurant.id), method: :DELETE do 
           -#             削除する
           -#         %button.btn.btn-secondary.m-3{"data-dismiss" => "modal", type: "button"} 閉じる
+  .container
+    = paginate @restaurants
 = render partial: 'restaurants/footer'
