--- a/app/views/restaurants/_navbar.html.haml
+++ b/app/views/restaurants/_navbar.html.haml
@@ -20,6 +20,6 @@
           = link_to new_user_session_path, class: "nav-link" do 
             ログイン
 
-    %form.form-inline.my-2.my-lg-0
-      %input.form-control.mr-sm-2{"aria-label" => "Search", :placeholder => "レストラン名", :type => "text"}/
-      %button.btn.btn-outline-success.my-2.my-sm-0{:type => "submit"} 検索する
+    -# %form.form-inline.my-2.my-lg-0
+    -#   %input.form-control.mr-sm-2{"aria-label" => "Search", :placeholder => "レストラン名", :type => "text"}/
+    -#   %button.btn.btn-outline-success.my-2.my-sm-0{:type => "submit"} 検索する
