--- a/app/views/restaurants/edit.html.haml
+++ b/app/views/restaurants/edit.html.haml
@@ -18,7 +18,7 @@
       = f.fields_for :images, @restaurant.images do |image|
         = image.label :url, for: "upload-image" do
           .sell_upload__area
-            = image.file_field :url, type: "file", id: "upload-image", class: "upload-image", value: @restaurant.images
+            = image.file_field :url, type: "file", id: "upload-image", class: "upload-image", value: image
         -# = image.file_field :url, class: 'form-control' 
         -# = image.hidden_field :id, value: image.object.id 
     .form-group
