--- a/app/views/restaurants/_navbar.html.haml
+++ b/app/views/restaurants/_navbar.html.haml
@@ -7,9 +7,6 @@
       %li.nav-item
         = link_to serch_restaurants_path, class: "nav-link" do
           名前で検索
-      %li.nav-item
-        = link_to detail_restaurants_path, class: "nav-link" do
-          ジャンルで検索
       - if user_signed_in?
         %li.nav-item
           = link_to new_restaurant_path, class: "nav-link" do 
@@ -21,7 +18,6 @@
         %li.nav-item
           = link_to new_user_session_path, class: "nav-link" do 
             ログイン
-
-    -# %form.form-inline.my-2.my-lg-0
-    -#   %input.form-control.mr-sm-2{"aria-label" => "Search", :placeholder => "レストラン名", :type => "text"}/
-    -#   %button.btn.btn-outline-success.my-2.my-sm-0{:type => "submit"} 検索する
+        %li.nav-item
+          = link_to new_user_registration_path, class: "nav-link" do
+            新規登録
