--- a/app/views/restaurants/_detail-card.html.haml
+++ b/app/views/restaurants/_detail-card.html.haml
@@ -13,5 +13,6 @@
       %h3.border
         %a.card-link.btn.btn-danger{:href => "#{@restaurant.tabelog}"} 食べログ
         %a.card-link.btn.btn-primary{:href => "#{@restaurant.shopurl}"} ショップURL
+        .btn.btn-dark.mx-3 お気に入りに登録
 = render 'comment-card'
 = render 'comment-form'
