--- a/app/views/restaurants/_detail-card.html.haml
+++ b/app/views/restaurants/_detail-card.html.haml
@@ -10,11 +10,14 @@
       %h3#font-size-15.border シーン
       %h3#font-size-20.border #{Scene.find_by(id: @restaurant.detail.scene).name}
       %h3#font-size-15.border 説明:<br> #{sp_br @restaurant.content}
-      %h3.border
+      %h3.m-2
         %a.card-link.btn.btn-danger{:href => "#{@restaurant.tabelog}"} 食べログ
         %a.card-link.btn.btn-primary{:href => "#{@restaurant.shopurl}"} ショップURL
-        .btn.btn-dark.mx-3 
-          = link_to users_path(current_user.id), class: "nav-link" do
+        .btn.btn-dark.ml-3
+          = link_to users_path(current_user.id), class: "card-link" do
             お気に入りに登録
+        .btn.btn-info.mx-3
+          = link_to users_path(current_user.id), class: "card-link" do
+            BESTに登録する
 = render 'comment-card'
 = render 'comment-form'
