--- a/app/views/restaurants/_detail-card.html.haml
+++ b/app/views/restaurants/_detail-card.html.haml
@@ -14,8 +14,12 @@
         %a.card-link.btn.btn-danger{:href => "#{@restaurant.tabelog}"} 食べログ
         %a.card-link.btn.btn-primary{:href => "#{@restaurant.shopurl}"} ショップURL
         .btn.btn-dark.ml-3
-          = link_to users_path(current_user.id), class: "card-link" do
-            お気に入りに登録
+          - if current_user.favorites.find_by(restaurant_id: @restaurant.id).nil?
+            = link_to favorites_path(@restaurant), method: :POST, class: "card-link" do
+              ブックマークに登録
+          - else
+            =link_to favorite_path(@restaurant.id), method: :DELETE, class: "card-link" do
+              ブックマークから削除
         .btn.btn-info.mx-3
           = link_to users_path(current_user.id), class: "card-link" do
             BESTに登録する
